--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -3,7 +3,6 @@
   display: flex;
   margin: 0 auto;
   justify-content: center;
-
 }
 
 .Hero .container {
@@ -11,7 +10,6 @@
   justify-content: space-between;
   gap: 165px;
 }
-
 
 .Hero .header-medium {
   font-size: 100px;
@@ -51,6 +49,8 @@
 .Hero .bottom-buttons {
   display: flex;
   gap: 32px;
+  align-items: center;
 }
 
-.Hero .cards {}
+.Hero .cards {
+}
