--- a/src/components/Label/Label.css
+++ b/src/components/Label/Label.css
@@ -1,13 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 .Label {
   display: inline-block;
   cursor: pointer;
   border-radius: 4px;
   font-weight: 500;
-  color: #1A191E;
-  font-family: 'Inter', sans-serif;
+  color: #1a191e;
+  font-family: "Inter", sans-serif;
   text-align: center;
 }
 
@@ -15,14 +14,12 @@
   font-size: 12px;
   line-height: 180%;
   padding: 0px 6px;
-  max-height: 40px;
 }
 
 .Label.size-medium {
   font-size: 13px;
   line-height: 180%;
   padding: 4px 10px;
-  max-height: 50%;
 }
 
 .Label.appearence-primary {
@@ -30,16 +27,14 @@
 }
 
 .Label.appearence-primary:hover {
-  background-color: #F8F8F8
+  background-color: #f8f8f8;
 }
 
 .Label.appearence-secondary {
-  color: #5BB5A2;
-
+  color: #5bb5a2;
 }
 
 .Label.appearence-secondary:hover {
-  background-color: #E8F2EE;
-  color: #5BB5A2;
-
+  background-color: #e8f2ee;
+  color: #5bb5a2;
 }
